# mocklist

./: .gitignore  Dockerfile  README.md  ai-improve.js  app.js  docker-compose.build.yml  docker-compose.yml  firebase-config.js  index.html  language-utils.js  package-lock.json  package.json  styles.css
functions/: .gitignore  index.js  package-lock.json  package.json  test-gemini.js  test-local-emulator.js  test-vertex-schema.js  test_vertex.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
