[package]
name = "mocklist"
version = "1.0.0"
description = "App Store Screenshot Generator"
authors = ["maikover"]
edition = "2021"

[lib]
name = "mocklist_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
